# regex-engine-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  regex-engine-cpp.code-workspace  run.sh
src/: CMakeLists.txt  main.cpp  testing-config.cmake
src/compiler/: CMakeLists.txt
src/compiler/include/compiler/: compiler_nfa.h  nfa.h  nfa_compiler.h  state.h
src/compiler/include/compiler/interface/: i_nfa.h  i_state.h  i_transition.h
src/compiler/src/: compiler_nfa.cpp  nfa.cpp  nfa_compiler.cpp
src/compiler/test/: CMakeLists.txt
src/compiler/test/pch/: pch.h
src/compiler/test/src/: test.cpp
src/framework/: CMakeLists.txt
src/framework/include/framework/: class_template.h  macros.h
src/framework/src/: source.cpp
src/parser/: CMakeLists.txt
src/parser/include/parser/: alternative.h  basic_parser.h  binary_token_node.h  character.h  concatenation.h  lexer.h  namespace.h  node.h  operator_type.h  quantifier.h  syntax_tree.h  token_parser.h  token_syntax_tree.h
src/parser/include/parser/exception/: basic_error.h  invalid_argument.h  invalid_regex.h
src/parser/include/parser/interface/: i_ast_parser.h  i_lexer.h  i_node.h  i_parser.h  i_quantifier.h  i_syntax_tree.h  i_token.h  i_token_ast.h  i_token_parser.h  inode.h  ioperator.h
src/parser/src/: alternative.cpp  basic_parser.cpp  character.cpp  concatenation.cpp  node.cpp  quantifier.cpp  source.cpp  syntax_tree.cpp  token_parser.cpp  token_syntax_tree.cpp
src/parser/src/exception/: basic_error.cpp  invalid_argument.cpp  invalid_regex.cpp
src/parser/test/: CMakeLists.txt
src/parser/test/pch/: pch.h
src/parser/test/src/: basic_parser_test.cpp  token_parser_test.cpp
src/parser/test/test-suites/: basic_parser_test.h  lexer_test.h  token_parser_test.h
src/pattern/: CMakeLists.txt
src/pattern/include/: alpha.h  character.h  character_group.h  choice.h  digit.h  match_result.h  one_or_more.h  optional.h  pattern_parser.h  regex.h  sequence.h  text.h  wildcard.h
src/pattern/interface/: imatch_result.h  interface.h  ipattern.h  ipattern_parser.h  isequence.h
src/pattern/src/: alpha.cpp  character.cpp  character_group.cpp  choice.cpp  digit.cpp  match_result.cpp  one_or_more.cpp  optional.cpp  pattern_parser.cpp  regex.cpp  sequence.cpp  text.cpp  wildcard.cpp
test/: CMakeLists.txt  build.sh
test/src/: pch.h
test/src/parser/: CMakeLists.txt  concatenation_test.cpp
