set (FRAMEWORK_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
set (FRAMEWORK_HEADER_DIR ${FRAMEWORK_INCLUDE_DIR}/framework)
set (FRAMEWORK_INTERFACE_DIR ${FRAMEWORK_INCLUDE_DIR}/framework/interface)
set (FRAMEWORK_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

file(GLOB_RECURSE FRAMEWORK_HEADERS ${FRAMEWORK_HEADER_DIR}/*.h)
file(GLOB_RECURSE FRAMEWORK_IMPLEMENTATION ${FRAMEWORK_SOURCE_DIR}/*.cpp)

set (FRAMEWORK_SOURCES ${FRAMEWORK_HEADERS} ${FRAMEWORK_IMPLEMENTATION})

add_library(framework STATIC ${FRAMEWORK_SOURCES})
# set_target_properties(framework PROPERTIES LINKER_LANGUAGE CXX)
# target_include_directories(framework PRIVATE ${FRAMEWORK_HEADER_DIR} ${FRAMEWORK_INTERFACE_DIR})
target_include_directories(framework PRIVATE ${FRAMEWORK_INCLUDE_DIR})
target_include_directories(framework INTERFACE ${FRAMEWORK_INCLUDE_DIR})
